--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --progress --colors --hot --inline --content-base ./dist",
+    "start": "webpack-dev-server --progress --colors --hot --inline",
     "build": "webpack --progress --colors"
   },
   "repository": {
@@ -18,11 +18,15 @@
     "url": "https://github.com/JS-Hao/webpack-cli/issues"
   },
   "homepage": "https://github.com/JS-Hao/webpack-cli#readme",
-  "dependencies": {},
+  "dependencies": {
+    "konva": "^2.1.6",
+    "redux": "^4.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.9.7"
